# ziwei-bazi-model

./: .gitignore  BUILD-REPORT.md  CONTRIBUTING.md  CURRENT_GROUP_MANIFEST  GOVERNANCE.md  GROUP-CLEAN-START-V1  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml  主提示词.txt
answer-vault/: README.md
case-bank/: intake-audit.json  manifest.json  source-overlap-audit.json
chat-input/: current.json
config/: answer-policy.json  case-asset-registry.json  current-topology-receipt.json  external-runner.json  github-topology.json  group-training-runtime.json  knowledge-route-map.json  legacy-public-migration-quarantine.json  model-runtime.json  open-source-release.json  public-executor.json  public-repository-policy.json  question-taxonomy.json  runtime-r17-candidate.json  runtime.json  source-policy.json  training-example-ingest-policy.json  training-policy.json
docs/: CASE-BANK-107-AUDIT.md  CASE-COVERAGE-REPORT.md  CHAT-WORK-HANDOFF-PROTOCOL.md  CHAT-WORK-RUNBOOK.md  FORMAL-ACTIVATION-RUNBOOK.md  IMPLEMENTATION-ROADMAP-V3.md  KNOWLEDGE-ENGINEERING-PHASE2.md  MODEL-ARCHITECTURE-V3.md  NO-WORK-ISSUE-RELAY.md  PHASE2-CURATION-AND-MODEL-STATUS-20260723.md  PROJECT-MAIN-PROMPT-R1.txt  PROJECT-MAIN-PROMPT-R2.txt  PUBLIC-RELEASE-SAFETY.md  R1-POLICY-AND-BATCH-A-AUDIT.md  REASONING-EXECUTION-LAYER-V2.md  SOURCE-KNOWLEDGE-MAP.md  architecture.md  blind-track-workflow.md  clean-start-bootstrap-v2.md  end-to-end-training-pipeline.md  external-runner.md  group-clean-start.md  group-training-acceptance-criteria.md  group-training-migration-checklist.md  group-training-single-session.md  group-training-state-machine.md  group-training-user-command.md  learning-cycle-v2.md  open-source-architecture.md  operations.md  preblind-staged-access.md  r17-cutover-status.md  risk-register.md  runtime-view-materialization.md  semi-automated-r1.md  training-example-ingest-standard.md
governance/: runtime-contamination-policy-v1.json
knowledge/: active-release.json
knowledge-workbench/: README.md  batch-a-case-coverage.json  batch-a-conflict-matrix.json  batch-a-static-cards.json  knowledge-card.schema.json  phase2-executable-cards.json  research-hypotheses.json  research-hypothesis.schema.json  school-method-cards.json  source-inventory.json
learning/: active-policy.json
licenses/: README.md  knowledge-pack-manifest.schema.json
method/: active-release.json
model/: active-release.json
model-learning/: runtime-governance.json
public-answer-vault/: README.md
public-executor-bootstrap/: README.md
reports/: DEV-EXAMPLE-003.body-materialization-receipt.json  DEV-EXAMPLE-004-snapshot-contract-blocked.json  DEV-EXAMPLE-004.body-materialization-receipt.json  DEV-EXAMPLE-005.body-materialization-receipt.json  DEV-EXAMPLE-005.body-materialization-summary.md  RUN-DEV-GROUP-002-20260717-9004B204-01.candidate-preflight.json  RUN-DEV-GROUP-002-20260717-9004B204-01.contract-generation-plan.json  answer-vault-workflow-readback.json  baseline-tag-trigger.json  binding-table-recompute-receipt.json  build-plan-and-risk.json  changed-files.json  dev-group-002-body-summary.json  dev-group-002-diagnostic-close.json  dev-group-002-readable-export.json  dev-group-002-snapshot-contract-summary.json  duplicate-and-quarantine-report.json  environment-and-github-audit.json  freeze-origin-install-gate.json  freeze-origin-install-gate.md  (+14 more)
(+1514 files in other folders)
