[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "fortune-case-trainer"
version = "3.0.0"
description = "Case-by-case, answer-isolated Ziwei and Bazi prediction training"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{name = "chinaneedM contributors"}]
dependencies = ["cryptography>=42,<47"]

[project.urls]
Repository = "https://github.com/chinaneedM/ziwei-bazi-model"
Issues = "https://github.com/chinaneedM/ziwei-bazi-model/issues"

[project.scripts]
fortune-train = "fortune_training.cli:main"
fortune-training-issue = "fortune_training.issue_relay:main"

[tool.setuptools.packages.find]
where = ["src"]
